rename svc-cloud-validation to svc-hl7-validation. note, code does not compile due to references to undeclared variables